problem with sign in/signup

--- a/Presentation.WebApp/wwwroot/css/scss/components/_forms.scss
+++ b/Presentation.WebApp/wwwroot/css/scss/components/_forms.scss
@@ -1,4 +1,4 @@
-form {
+/*form {
     width: 100%;
     display: grid;
 
@@ -58,4 +58,160 @@ form {
     padding: 0.5rem;
     border-radius: 8px;
     text-align: center;
+}*/
+
+
+form {
+    width: 100%;
+    display: grid;
+
+
+    .input-group {
+        margin: 1rem 0;
+        display: grid;
+    }
+
+    .Checkbox {
+        span {
+            display: block;
+
+            &.field-validation-error {
+                position: static;
+                top: 0;
+                right: 0;
+                @include text-s;
+                color: $danger;
+            }
+        }
+    }
+
+    .checkbox-group {
+        position: relative;
+        height: 50px;
+
+        .input-group {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            gap: 0.5rem;
+
+            input[type="checkbox"] {
+                width: 1.2rem;
+                height: 1.2rem;
+                border: 0.06rem solid red;
+
+                &.input-validation-error {
+                    position: relative;
+                    bow-shadow: 0 0 0 0.06rem $danger;
+                    color: $danger;
+
+                    &::placeholder {
+                        color: $danger;
+                    }
+                }
+            }
+
+            label {
+                margin: 0;
+                font-weight: 400;
+            }
+        }
+        /*
+        .field-validation-error-terms {
+            
+
+            &::after {
+                @include text-s;
+                color: $danger;
+                position: absolute;
+                right: 10px;
+                top: 0px;
+                z-index: 10;
+                font-size: 2em;
+                display: block;
+                content: '\2BBF';
+            }
+        }*/
+    }
+
+
+
+
+
+
+
+
+
+
+    label {
+        margin-bottom: 3px;
+        font-weight: 700;
+    }
+
+    input {
+        padding: 1rem;
+        border-radius: 8px !important;
+        border: 1px solid $gray-400;
+
+        &::placeholder {
+            opacity: 0.4;
+        }
+
+        &.input-validation-error {
+            position: relative;
+            border: 0.06rem solid $danger !important;
+            color: $danger;
+
+            &::placeholder {
+                color: $danger;
+            }
+        }
+
+        &:focus {
+            outline: none;
+            border: 0.06rem solid $gray-600;
+        }
+    }
+
+
+
+
+    textarea {
+        padding: 1rem;
+        border-radius: 0.5rem !important;
+        border: 0.06 rem solid $gray-400;
+        resize: none;
+
+        &::placeholder {
+            opacity: 0.4;
+        }
+
+        &.input-validation-error {
+            border: 0.06rem solid $danger !important;
+            color: $danger;
+        }
+    }
+
+    span {
+        &.field-validation-error {
+            // position: absolute;
+            top: 0;
+            right: 0;
+            @include text-s;
+            color: $danger;
+
+            &::after {
+                position: absolute;
+                right: 10px;
+                top: 67px;
+                z-index: 10;
+                font-size: 2em;
+                display: block;
+                content: '\2BBF';
+            }
+        }
+    }
 }
+
+
+
