--- a/Presentation.WebApp/wwwroot/css/scss/sections/_signup.scss
+++ b/Presentation.WebApp/wwwroot/css/scss/sections/_signup.scss
@@ -1,4 +1,4 @@
-.signup {
+/*.signup {
 
     .container {
         width: 75%;
@@ -116,6 +116,134 @@
      
                 }
 
+            }
+        }
+    }
+}*/
+
+
+#signup {
+    height: 100%;
+
+
+
+    .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        margin: 0 auto;
+
+        @include lg {
+            width: 60%;
+        }
+
+        @include xl {
+            width: 40%;
+        }
+
+        form {
+            padding: 1rem;
+
+            .content {
+                display: grid;
+                gap: 0 1rem;
+                grid-template-columns: 1fr;
+                grid-template-areas: "firstname" "lastname" "email" "password" "confirm" "terms" "button";
+
+                @include md {
+                    grid-template-columns: 1fr 1fr;
+                    grid-template-areas: "firstname lastname" "email email" "password password" "confirm confirm" "terms terms" "button button";
+                }
+
+                #form-firstname {
+                    grid-area: firstname;
+                }
+
+                #form-lastname {
+                    grid-area: lastname;
+                }
+
+                #form-email {
+                    grid-area: email;
+                }
+
+                #form-password {
+                    grid-area: password;
+                }
+
+                #form-confirm {
+                    grid-area: confirm;
+                }
+
+                #form-terms {
+                    grid-area: terms;
+                }
+
+                #form-submit {
+                    grid-area: button;
+                }
+            }
+        }
+    }
+}
+
+
+@media (min-width: 768px) {
+
+    .signup {
+        margin-top: 30px;
+
+        .container {
+
+
+            form {
+                .form-content {
+                    grid-template-columns: 1fr 1fr;
+                    grid-template-areas: "firstname lastname" "email email" "password confirm" "terms terms" "submit submit";
+                }
+
+                .input-group {
+
+                    label {
+                        padding: 3px;
+                    }
+
+                    margin-bottom: 20px;
+                }
+
+                .checkbox-group {
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 992px) {
+
+    .signup {
+        margin-top: 30px;
+
+        .container {
+            width: 45%;
+
+            form {
+                .form-content {
+                    grid-template-columns: 1fr 1fr;
+                    grid-template-areas: "firstname lastname" "email email" "password confirm" "terms terms" "submit submit";
+                }
+
+                .input-group {
+
+                    label {
+                        padding: 3px;
+                    }
+
+                    margin-bottom: 20px;
+                }
+
+                .checkbox-group {
+                }
             }
         }
     }
