--- a/Presentation.WebApp/Views/Auth/SignIn.cshtml
+++ b/Presentation.WebApp/Views/Auth/SignIn.cshtml
@@ -1,6 +1,54 @@
 ﻿@model SignInViewModel
 
 @{
+    ViewData["Title"] = Model.Title;
+}
+
+<section id="signin">
+    <div class="container">
+
+        <form method="post" asp-controller="Auth" asp-action="SignIn" novalidate>
+            <div asp-validation-summary="All"></div>
+            
+            <div>
+                @Model.ErrorMessage;
+            </div>
+
+            <h1>Welcome Back</h1>
+            <p>Don't have an account yet?<a asp-controller="Auth" asp-action="SignUp">Sign up here</a>.</p>
+
+            <div class="content">
+
+                <div id="form-email" class="input-group">
+                    <label asp-for="Form.Email"></label>
+                    <span asp-validation-for="Form.Email"></span>
+                    <input asp-for="Form.Email" />
+                </div>
+
+                <div id="form-password" class="input-group">
+                    <label asp-for="Form.Password"></label>
+                    <span asp-validation-for="Form.Password"></span>
+                    <input asp-for="Form.Password" />
+                </div>
+
+                <div id="form-remember" class="checkbox">
+                    <div class="checkbox-group">
+                        <input asp-for="Form.RememberMe" />
+                        <label asp-for="Form.RememberMe"></label>
+                    </div>
+                </div>
+                <button id="form-submit" class="btn-theme-s" type="submit">@Model.Title</button>
+
+                <a id="form-forgot-password" asp-controller="Account" asp-action="Forgot">Forgot your password?</a>
+
+            </div>
+
+        </form>
+    </div>
+</section>
+@* @model SignInViewModel
+
+@{
     ViewData["Title"] = "Sign In to your account";
 }
 
@@ -44,4 +92,5 @@
         </form>
 
     </div>
-</section>
+</section> *@
+
