--- a/Presentation.WebApp/Views/Auth/SignUp.cshtml
+++ b/Presentation.WebApp/Views/Auth/SignUp.cshtml
@@ -1,8 +1,72 @@
 ﻿@model SignUpViewModel
 
 
+
 @{
     ViewData["Title"] = "Create Account";
+}
+
+
+<section id="signup">
+    <div class="container">
+        @*vid post av formulär, går vi här till Auth-controller och till sign up*@
+        <form method="post" asp-controller="Auth" asp-action="SignUp" novalidate>
+            <h1>Create Account</h1>
+            <p>Already have an account? <a asp-controller="Auth" asp-action="SignIn">Sign in here</a>.</p>
+
+            <div class="content">
+                <div id="form-firstname" class="input-group">
+                    <label asp-for="Form.FirstName"></label>
+                    <span asp-validation-for="Form.FirstName"></span>
+                    <input asp-for="Form.FirstName" />
+                </div>
+
+                <div id="form-lastname" class="input-group">
+                    <label asp-for="Form.LastName"></label>
+                    <span asp-validation-for="Form.LastName"></span>
+                    <input asp-for="Form.LastName" />
+                </div>
+
+                <div id="form-email" class="input-group">
+                    <label asp-for="Form.Email"></label>
+                    <span asp-validation-for="Form.Email"></span>
+                    <input asp-for="Form.Email" />
+                </div>
+
+                <div id="form-password" class="input-group">
+                    <label asp-for="Form.Password"></label>
+                    <span asp-validation-for="Form.Password"></span>
+                    <input asp-for="Form.Password" />
+                </div>
+
+                <div id="form-confirm" class="input-group">
+                    <label asp-for="Form.ConfirmPassword"></label>
+                    <span asp-validation-for="Form.ConfirmPassword"></span>
+                    <input asp-for="Form.ConfirmPassword" />
+                </div>
+
+                <div id="form-terms" class="checkbox">
+                    <div class="checkbox-group">
+                        <input asp-for="Form.TermsAndConditions" />
+                        <label asp-for="Form.TermsAndConditions">I agree to the <a asp-controller="About" asp-action="Terms">Terms</a> &amp; <a asp-controller="About" asp-action="Conditions">Conditions</a>.</label>
+                    </div>
+                    <span asp-validation-for="Form.TermsAndConditions"></span>
+                </div>
+            </div>
+
+            <button id="form-submit" class="btn-theme-s" type="submit">Sign Up</button>
+        </form>
+    </div>
+
+
+</section>
+
+
+
+
+@*
+@{
+    ViewData["Title"] = Model.Title;
 }
 
 
@@ -48,12 +112,14 @@
                     <input asp-for="Form.ConfirmPassword" />
                     <span asp-validation-for="Form.ConfirmPassword"></span>
                 </div>
-                <div id="terms" class="checkbox-group">
-                    <div class="input-group">
+
+                <div id="terms" class="checkbox">
+                    <div class="input-group checkbox-group">
                         <input asp-for="Form.TermsAndConditions" />
                         <label asp-for="Form.TermsAndConditions">
                             I accept the <a asp-action="TermsAndCondition" asp-controller="About">Terms & Conditions</a>.
                         </label>
+                        <span asp-asp-validation-for="Form.TermsAndConditions"></span>
                     </div>
                 </div>
                 <button id="btn-submit" type="submit" class="btn-theme-s">Sign Up</button>
@@ -61,4 +127,4 @@
         </form>
 
     </div>
-</section>
+</section> *@
